Language: Fixes and removal of deprecated strings

--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -36,6 +36,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Ferramientes",
+    "Loading...": "Loading...",
     "Course language": "Llingua del cursu:",
     "Department": "Departamentu",
     "Department URL": "URL del departamentu",
@@ -607,7 +608,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Web de Chamilo",
+    "Website": "Web",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
