--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -41,6 +41,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Eines",
     "Loading": "Carregant",
+    "Loading...": "Loading...",
     "Course language": "Idioma del curs",
     "Department": "Departament",
     "Department URL": "URL del Departament",
@@ -692,7 +693,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Lloc web de Chamilo",
+    "Website": "Lloc web",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
