--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -23,6 +23,7 @@
     "Add": "P\u0159idat",
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
+    "Loading...": "Loading...",
     "Department": "Odd\u011blen\u00ed",
     "Department URL": "URL odd\u011blen\u00ed",
     "Expiration date": "Datum vypr\u0161en\u00ed",
@@ -466,7 +467,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Webov\u00e1 str\u00e1nka Chamilo",
+    "Website": "Webov\u00e1 str\u00e1nka",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
