--- a/assets/locales/da.json
+++ b/assets/locales/da.json
@@ -31,6 +31,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "V\u00e6rkt\u00f8jer",
+    "Loading...": "Loading...",
     "Course language": "Sprog p\u00e5 kursusside:",
     "Department": "Institut/Afdeling",
     "Department URL": "Institut/Afdeling URL",
@@ -292,7 +293,7 @@
     "Search users for friends": "Search users for friends",
     "Picture": "Billede",
     "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:",
-    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstall script opretter claroline hoved DB. Venligst bem\u00e6rk at Claroline \t\t\t\thar brug for at oprette mange DBs (medmindre du har valgt \"En\" forneden). If you are allowed only one \t\t\t\tDB for your website by your Hosting Services, Claroline will not work.",
+    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstall script opretter Chamilo hoved DB. Venligst bem\u00e6rk at Chamilo \t\t\t\thar brug for at oprette mange DBs (medmindre du har valgt \"En\" forneden). If you are allowed only one \t\t\t\tDB for your website by your Hosting Services, Chamilo will not work.",
     "Continue with %s": "Continue with {0}",
     "Change Password": "Change Password",
     "All Messages": "All Messages",
@@ -517,7 +518,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo website",
+    "Website": "Website",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
