--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -44,6 +44,7 @@
     "Course introduction": "Kurseinf\u00fchrung",
     "Tools": "Werkzeuge",
     "Loading": "Ladevorgang",
+    "Loading...": "Loading...",
     "Course language": "Kurssprache:",
     "Department": "Bereich",
     "Department URL": "Bereichs-URL",
@@ -738,7 +739,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo Webseite",
+    "Website": "Webseite",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
