--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -28,6 +28,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Iloj",
+    "Loading...": "Loading...",
     "Department": "Fakultato/faka grupo",
     "Department URL": "URL de via fakultato a\u016d fakgrupo",
     "Expiration date": "Fina dato",
@@ -498,7 +499,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Retejo de Chamilo",
+    "Website": "Retejo",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
