--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -44,6 +44,7 @@
     "Course introduction": "Introducci\u00f3n del curso",
     "Tools": "Herramientas",
     "Loading": "Cargando",
+    "Loading...": "Loading...",
     "Course language": "Idioma del curso:",
     "Department": "Departamento",
     "Department URL": "URL del departamento",
@@ -738,7 +739,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Web de Chamilo",
+    "Website": "Sitio web",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
