--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -39,6 +39,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Tresnak",
     "Loading": "Kargatzen",
+    "Loading...": "Loading...",
     "Course language": "Ikastaroaren hizkuntza:",
     "Department": "Saila",
     "Department URL": "Sailaren URL",
@@ -663,7 +664,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo webgunea",
+    "Website": "Webgunea",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
