--- a/assets/locales/fo_FO.json
+++ b/assets/locales/fo_FO.json
@@ -20,6 +20,7 @@
     "Add": "Goym",
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
+    "Loading...": "Loading...",
     "New folder": "New folder",
     "Name": "Navn",
     "Actions": "Actions",
