--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -739,7 +739,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo sur le web",
+    "Website": "Site web",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
