--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -34,6 +34,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Eszk\u00f6z\u00f6k",
+    "Loading...": "Loading...",
     "Course language": "A kurzus nyelve:",
     "Department": "R\u00e9szleg",
     "Department URL": "A r\u00e9szleg URL-je",
@@ -580,7 +581,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo honlap",
+    "Website": "Honlap",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
