--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -43,6 +43,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Strumenti",
     "Loading": "Caricamento",
+    "Loading...": "Loading...",
     "Course language": "Lingua usata:",
     "Department": "Dipartimento",
     "Department URL": "URL del Dipartimento",
@@ -704,7 +705,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Sito Chamilo",
+    "Website": "Sito",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
