--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -26,6 +26,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "\ub3c4\uad6c",
+    "Loading...": "Loading...",
     "Department": "\ub2e8\uacfc",
     "Department URL": "\ub2e8\uacfc URL",
     "Expiration date": "\uc885\ub8cc \ub0a0\uc9dc",
@@ -472,7 +473,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Dokes \uc6f9\uc0ac\uc774\ud2b8",
+    "Website": "\uc6f9\uc0ac\uc774\ud2b8",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
