--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -31,6 +31,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "\u012erankiai",
+    "Loading...": "Loading...",
     "Department": "Padalinys",
     "Department URL": "Padalinio URL",
     "Expiration date": "Galiojimo pasibaigimo data",
@@ -533,7 +534,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo nam\u0173 puslapis",
+    "Website": "Nam\u0173 puslapis",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
