--- a/assets/locales/nn_NO.json
+++ b/assets/locales/nn_NO.json
@@ -19,6 +19,7 @@
     "Add": "Legg til",
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
+    "Loading...": "Loading...",
     "Expiration date": "Utl\u00f8psdato",
     "New folder": "New folder",
     "Name": "Navn",
@@ -426,7 +427,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo nettsted",
+    "Website": "Nettsted",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
