--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -38,6 +38,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Narz\u0119dzia",
     "Loading": "\u0141adowanie",
+    "Loading...": "Loading...",
     "Course language": "J\u0119zyk:",
     "Department": "Wydzia\u0142",
     "Department URL": "Adres internetowy Wydzia\u0142u",
@@ -661,7 +662,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Strona internetowa Chamilo",
+    "Website": "Strona internetowa",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
