--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -40,6 +40,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Ferramentas",
+    "Loading...": "Loading...",
     "Course language": "Idioma",
     "Department": "Departamento",
     "Department URL": "URL do Departamento",
@@ -673,7 +674,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "P\u00e1gina web do Chamilo",
+    "Website": "P\u00e1gina web",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
