--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -36,6 +36,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Llank'ana",
+    "Loading...": "Loading...",
     "Course language": "Yachachinaq simin:",
     "Department": "Departamento",
     "Department URL": "URL departamento nisqamanta",
@@ -595,7 +596,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo-manta web raphin",
+    "Website": "Web raphin",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
