--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -41,6 +41,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Unelte",
     "Loading": "Inc\u0103rcand",
+    "Loading...": "Loading...",
     "Course language": "Limba cursului:",
     "Department": "Departament",
     "Department URL": "URL departamentului",
@@ -677,7 +678,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Site Chamilo",
+    "Website": "Site",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
