--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -41,6 +41,7 @@
     "Course introduction": "Course introduction",
     "Tools": "N\u00e1stroje",
     "Loading": "Nahr\u00e1vam",
+    "Loading...": "Loading...",
     "Course language": "Jazyk kurzu:",
     "Department": "Oddelenie",
     "Department URL": "URL oddelenia",
@@ -691,7 +692,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo webov\u00e1 str\u00e1nka",
+    "Website": "Webov\u00e1 str\u00e1nka",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
