--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -44,6 +44,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Orodja",
     "Loading": "Nalaganje",
+    "Loading...": "Loading...",
     "Course language": "Jezik te\u010daja:",
     "Department": "Oddelek",
     "Department URL": "URL oddelka",
@@ -727,7 +728,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Spletna stran Chamilo",
+    "Website": "Spletna stran",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
