--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -32,6 +32,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Verktyg",
+    "Loading...": "Loading...",
     "Course language": "V\u00e4lj spr\u00e5k:",
     "Department": "Avdelning",
     "Department URL": "Avdelningens URL",
@@ -321,7 +322,7 @@
     "Please read the following requirements thoroughly.": "L\u00e4s grundligt",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Rekommenderade inst\u00e4llningar f\u00f6r serverns konfiguration. Inst\u00e4llningarna g\u00f6rs i konfigurationsfilen php.ini av serveradministrat\u00f6ren p\u00e5 din server",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo \u00e4r ett fritt program distribuerat under GNU General Public license (GPL)",
-    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstallationsscriptet kommer att skapa huvuddatabasen f\u00f6r claroline. Var sn\u00e4ll och notera att Claroline \t\t\t\tbeh\u00f6ver skapa m\u00e5nga databaser. Om du bara \u00e4r till\u00e5ten f\u00f6r en  \t\t\t\tDB f\u00f6r din webbsajt av din V\u00e4rdservice, kommer Claroline inte att fungera.",
+    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstallationsscriptet kommer att skapa huvuddatabasen f\u00f6r Chamilo. Var sn\u00e4ll och notera att Chamilo \t\t\t\tbeh\u00f6ver skapa m\u00e5nga databaser. Om du bara \u00e4r till\u00e5ten f\u00f6r en  \t\t\t\tDB f\u00f6r din webbsajt av din V\u00e4rdservice, kommer Chamilo inte att fungera.",
     "The install script will erase all tables of the selected database. We heavily recommend you do a full backup of them before confirming this last install step.": "Installationsprogrammet kommer ta bort alla tabeller i den valda databasen. Vi rekommenderar verkligen att du g\u00f6r en fullst\u00e4ndig s\u00e4kerhetskopia av dem innan du bekr\u00e4ftar detta sista installationssteg, annars f\u00f6rlorar du alla data i tabellerna.",
     "Continue with %s": "Continue with {0}",
     "Change Password": "Change Password",
@@ -560,7 +561,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo webbsida",
+    "Website": "Webbsida",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
