--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -23,6 +23,7 @@
     "Add": "Magdagdag",
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
+    "Loading...": "Loading...",
     "Course language": "Wika:",
     "Size": "Laki",
     "New folder": "New folder",
