--- a/assets/locales/vi_VN.json
+++ b/assets/locales/vi_VN.json
@@ -17,6 +17,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "c\u00f4ng c\u1ee5",
+    "Loading...": "Loading...",
     "Department": "Tr\u01b0\u1eddng/Khoa",
     "Department URL": "\u0110\u01b0\u01a1ng d\u1eabn trang ch\u1ee7 c\u1ee7a khoa",
     "Expiration date": "Ng\u00e0y h\u1ebft h\u1ea1n",
@@ -91,7 +92,6 @@
     "Your portal name": "Your campus' name",
     "Your company short name": "Organisation short name",
     "None": "None",
-    "Allow self-registration": "Allow self-registration",
     "Update Chamilo": "Update Chamilo",
     "Step 6 - Last check before install": "Step 6 - Last check before install",
     "Main language": "Main language",
@@ -207,7 +207,6 @@
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
     "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:",
-    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstall script will create claroline main DB. Please note that Claroline \t\t\t\twill need to create many DBs (unless you select option \"One\" below). If you are allowed only one \t\t\t\tDB for your website by your Hosting Services, Claroline will not work.",
     "Continue with %s": "Continue with {0}",
     "Change Password": "Change Password",
     "All Messages": "All Messages",
@@ -409,7 +408,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Claroline website",
+    "Website": "Website",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
