--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -34,6 +34,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "\u5de5\u5177",
+    "Loading...": "Loading...",
     "Department": "\u90e8\u95e8",
     "Department URL": "\u90e8\u95e8\u94fe\u63a5",
     "Expiration date": "\u8fc7\u671f",
@@ -562,7 +563,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "DEKEOS\u7f51\u7ad9",
+    "Website": "\u7f51\u7ad9",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
