--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -30,6 +30,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "\u5de5\u5177",
+    "Loading...": "Loading...",
     "Course language": "\u8ab2\u7a0b\u8a9e\u8a00\uff1a",
     "Department": "\u90e8\u9580",
     "Department URL": "\u90e8\u9580\u93c8\u63a5",
@@ -536,7 +537,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "DEKEOS\u7db2\u7ad9",
+    "Website": "\u7db2\u7ad9",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
