--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -43,6 +43,7 @@
     "Course introduction": "Course introduction",
     "Tools": "\u0627\u0644\u0623\u062f\u0648\u0627\u062a",
     "Loading": "\u0627\u0644\u062a\u062d\u0645\u064a\u0644",
+    "Loading...": "Loading...",
     "Course language": "\u0644\u063a\u0629 \u0627\u0644\u0645\u0642\u0631\u0631",
     "Department": "\u0642\u0633\u0645",
     "Department URL": "\u0631\u0627\u0628\u0637 \u0627\u0644\u0642\u0633\u0645",
