--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -34,6 +34,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Ty\u00f6kalut",
+    "Loading...": "Loading...",
     "Course language": "Kieli:",
     "Department": "Osasto",
     "Department URL": "Osaston URL",
