--- a/assets/locales/gl.json
+++ b/assets/locales/gl.json
@@ -44,6 +44,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Tools",
     "Loading": "Loading",
+    "Loading...": "Loading...",
     "Course language": "Course language",
     "Department": "Department",
     "Department URL": "Department URL",
