--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -43,6 +43,7 @@
     "Course introduction": "Course introduction",
     "Tools": "\u05db\u05dc\u05d9\u05dd",
     "Loading": "\u05d8\u05d5\u05e2\u05df",
+    "Loading...": "Loading...",
     "Course language": "\u05e9\u05e4\u05ea \u05d4\u05e7\u05d5\u05e8\u05e1",
     "Department": "\u05de\u05d7\u05dc\u05e7\u05d4",
     "Department URL": "\u05db\u05ea\u05d5\u05d1\u05ea \u05d0\u05ea\u05e8 \u05e9\u05dc \u05de\u05d7\u05dc\u05e7\u05d4",
