--- a/assets/locales/hr_HR.json
+++ b/assets/locales/hr_HR.json
@@ -35,6 +35,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Alati",
+    "Loading...": "Loading...",
     "Course language": "Jezik kolegija:",
     "Department": "Odjel",
     "Department URL": "URL Odjela (Zavoda, Katedre)",
@@ -561,7 +562,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Web stranica Chamiloa",
+    "Website": "Web stranica",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
