--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -39,6 +39,7 @@
     "Course introduction": "Course introduction",
     "Tools": "Instrumenti",
     "Loading": "Iel\u0101d\u0113t",
+    "Loading...": "Loading...",
     "Course language": "Valoda:",
     "Department": "Noda\u013ca",
     "Department URL": "Noda\u013cas URL",
@@ -654,7 +655,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo m\u0101jas lapa",
+    "Website": "M\u0101jas lapa",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
