--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -44,6 +44,7 @@
     "Course introduction": "Cursusintroductie",
     "Tools": "Functies",
     "Loading": "Loading",
+    "Loading...": "Loading...",
     "Course language": "Taal van de cursus:",
     "Department": "Faculteit/vakgroep",
     "Department URL": "URL van uw faculteit of vakgroep",
@@ -738,7 +739,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilowebsite",
+    "Website": "Website",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
