--- a/assets/locales/ps.json
+++ b/assets/locales/ps.json
@@ -9,6 +9,7 @@
     "{resource} created": "{resource} created",
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
+    "Loading...": "Loading...",
     "New folder": "New folder",
     "Actions": "Actions",
     "New document": "New document",
