--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -31,6 +31,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "\u0418\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u044b",
+    "Loading...": "Loading...",
     "Course language": "\u042f\u0437\u044b\u043a \u043a\u0443\u0440\u0441\u0430:",
     "Department": "\u0423\u0447\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435",
     "Department URL": "\u0410\u0434\u0440\u0435\u0441 (URL) \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u044f",
@@ -546,7 +547,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "\u0412\u0435\u0431\u0441\u0430\u0439\u0442 Chamilo",
+    "Website": "\u0412\u0435\u0431\u0441\u0430\u0439\u0442",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
