--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -27,6 +27,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Alati",
+    "Loading...": "Loading...",
     "Department": "Oblast",
     "Department URL": "URL oblasti",
     "Expiration date": "Datum isticanja",
@@ -517,7 +518,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo web",
+    "Website": "Web",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
