--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -31,6 +31,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "Ara\u00e7lar",
+    "Loading...": "Loading...",
     "Course language": "Dil:",
     "Department": "B\u00f6l\u00fcm",
     "Department URL": "B\u00f6l\u00fcm URL",
@@ -307,7 +308,7 @@
     "Picture": "Resim",
     "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:",
     "Please read the following requirements thoroughly.": "Tamamen okuyun",
-    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstall script will create claroline main DB. Please note that Claroline \t\t\t\twill need to create many DBs. If you are allowed only one \t\t\t\tDB for your website by your Hosting Services, Claroline will not work.",
+    "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "\t\t\t\tInstall script will create chamilo main DB. Please note that Chamilo \t\t\t\twill need to create many DBs. If you are allowed only one \t\t\t\tDB for your website by your Hosting Services, Chamilo will not work.",
     "Continue with %s": "Continue with {0}",
     "Change Password": "Change Password",
     "All Messages": "All Messages",
@@ -537,7 +538,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "Chamilo sitesi",
+    "Website": "Sitesi",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
