--- a/assets/locales/uk_UA.json
+++ b/assets/locales/uk_UA.json
@@ -23,6 +23,7 @@
     "Go to session": "Go to session",
     "Course introduction": "Course introduction",
     "Tools": "\u0406\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u0438",
+    "Loading...": "Loading...",
     "Department": "\u0423\u0441\u0442\u0430\u043d\u043e\u0432\u0430",
     "Department URL": "\u0410\u0434\u0440\u0435\u0441\u0430 URL \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u0438",
     "Expiration date": "\u0422\u0435\u0440\u043c\u0456\u043d \u0437\u0430\u043a\u0456\u043d\u0447\u0435\u043d\u043d\u044f \u0434\u0456\u0457",
@@ -448,7 +449,7 @@
     "Select users": "Select users",
     "Third parties (GDPR)": "Third parties (GDPR)",
     "Add third party": "Add third party",
-    "Website": "\u0412\u0435\u0431\u0441\u0430\u0439\u0442 Chamilo",
+    "Website": "\u0412\u0435\u0431\u0441\u0430\u0439\u0442",
     "Recruiter": "Recruiter",
     "Data exchange": "Data exchange",
     "Send data": "Send data",
