--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -641,7 +641,7 @@
     "Color": "Couleur",
     "Unmark favorite": "Unmark favorite",
     "Mark favorite": "Mark favorite",
-    "Register student": "Register student",
+    "Register student": "Inscrire un apprenant",
     "Duration": "Dur\u00e9e",
     "Dependencies": "D\u00e9pendances",
     "Price": "Prix",
@@ -718,10 +718,10 @@
     "Add files": "Ajouter fichiers",
     "Diagnosis management": "Gestion des diagnostics",
     "Dashboard": "Panneau de contr\u00f4le",
-    "Favorite courses": "Favorite courses",
-    "Completed courses": "Completed courses",
+    "Favorite courses": "Cours pr\u00e9f\u00e9r\u00e9s",
+    "Completed courses": "Cours finis",
     "Incomplete courses": "Incomplete courses",
-    "Restartable courses": "Restartable courses",
+    "Restartable courses": "Cours \u00e0 recommencer",
     "Session administrator": "Administrateur de sessions",
     "Does not have enough contrast against background": "Does not have enough contrast against background",
     "Featured courses": "Featured courses",
@@ -905,27 +905,27 @@
     "Layout JSON details": "Layout JSON details",
     "Are you sure you want to delete this template?": "Are you sure you want to delete this template?",
     "Page layout details": "Page layout details",
-    "Available courses in this URL": "Available courses in this URL",
-    "Issued at": "Issued at",
+    "Available courses in this URL": "Cours disponible sur cette URL",
+    "Issued at": "G\u00e9n\u00e9r\u00e9 le",
     "Load more": "Load more",
-    "Session period": "Session period",
-    "Search student": "Search student",
-    "Create new user": "Create new user",
-    "Matching students": "Matching students",
-    "Active": "Active",
-    "Local user": "Local user",
-    "Inactive": "Inactive",
-    "External user": "External user",
-    "Send course invitation": "Send course invitation",
-    "Password (leave blank to auto)": "Password (leave blank to auto)",
-    "Send access details to user by email": "Send access details to user by email",
-    "Course sent to": "Course sent to",
-    "User created": "User created",
-    "Could not create user": "Could not create user",
-    "Ended": "Ended",
-    "Extend one week": "Extend one week",
+    "Session period": "P\u00e9riode de la session",
+    "Search student": "Rechercher un apprenant",
+    "Create new user": "Cr\u00e9er un nouvel utilisateur",
+    "Matching students": "Apprenants trouv\u00e9s",
+    "Active": "Actif",
+    "Local user": "Utilisateur local",
+    "Inactive": "Inactif",
+    "External user": "Utilisateur externe",
+    "Send course invitation": "Envoyer invitation au cours",
+    "Password (leave blank to auto)": "Mot de passe (laisser vide pour auto)",
+    "Send access details to user by email": "Envoyer les d\u00e9tails d'acc\u00e8s \u00e0 l'utilisateur par e-mail",
+    "Course sent to": "Cours envoy\u00e9 \u00e0",
+    "User created": "Utilisateur cr\u00e9\u00e9",
+    "Could not create user": "L'utilisateur n'a pas pu \u00eatre cr\u00e9\u00e9",
+    "Ended": "Termin\u00e9 le",
+    "Extend one week": "Prolonger d'une semaine",
     "Could not load data": "Could not load data",
-    "Session extended": "Session extended",
+    "Session extended": "Session prolong\u00e9e",
     "Action failed": "Action failed",
     "What skills are you looking for?": "Quelles comp\u00e9tences\u202f?",
     "View skills wheel": "Voir la roue des comp\u00e9tences",
@@ -1042,7 +1042,7 @@
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
     "No favorite courses": "No favorite courses",
-    "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled",
+    "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled": "Cette liste affiche les utilisateurs de toutes les URL d'acc\u00e8s car le param\u00e8tre \u00ab session_admin_access_to_all_users_on_all_urls \u00bb est activ\u00e9",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
     "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR": "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR",
