Language: add 1 missing translation in FR for specific functionnality for Session admins - refs BT#22437

--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -720,7 +720,7 @@
     "Dashboard": "Panneau de contr\u00f4le",
     "Favorite courses": "Cours pr\u00e9f\u00e9r\u00e9s",
     "Completed courses": "Cours finis",
-    "Incomplete courses": "Incomplete courses",
+    "Incomplete courses": "Cours non termin\u00e9s",
     "Restartable courses": "Cours \u00e0 recommencer",
     "Session administrator": "Administrateur de sessions",
     "Does not have enough contrast against background": "Does not have enough contrast against background",
