--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -1042,7 +1042,7 @@
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
     "No favorite courses": "No favorite courses",
-    "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled": "Cette liste affiche les utilisateurs de toutes les URL d'acc\u00e8s car le param\u00e8tre \u00ab session_admin_access_to_all_users_on_all_urls \u00bb est activ\u00e9",
+    "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "Cette liste affiche les utilisateurs de toutes les URL d'acc\u00e8s car le param\u00e8tre \u00ab session_admin_access_to_all_users_on_all_urls \u00bb est activ\u00e9.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
     "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR": "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR",
