--- a/assets/locales/ps.json
+++ b/assets/locales/ps.json
@@ -593,7 +593,7 @@
     "Loading courses": "Loading courses",
     "No courses available": "No courses available",
     "No favorite courses": "No favorite courses",
-    "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled",
+    "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.": "This list displays users from all access URLs because the setting \"session_admin_access_to_all_users_on_all_urls\" is enabled.",
     "User not found": "User not found",
     "An error occurred while sending the course": "An error occurred while sending the course",
     "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR": "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR",
